# Pong-Z

./: .clang-format  .gitignore  CMakeLists.txt  README.md  myprog.cpp  readme.txt
examples/basics/: CMakeLists.txt  CMakeSettings.json  Makefile  basics_test.sol  main.cpp
examples/canvas/: CMakeLists.txt  Makefile  canvas_test.sol  main.cpp
examples/canvas_extended_primitives/: CMakeLists.txt  Makefile  canvas_primitives_test.sol  main.cpp
examples/primitives/: CMakeLists.txt  Makefile  main.cpp  primitives_test.sol
pong/: CMakeLists.txt  frontend.cpp  frontend.hpp  main.cpp  object.cpp  object.hpp  pong_engine.cpp  pong_engine.hpp  score_board.cpp  score_board.hpp
pong_step0/: CMakeLists.txt  Makefile  ball.cpp  ball.hpp  main.cpp  pong_step0.sol
pong_step1/: CMakeLists.txt  Makefile  main.cpp  object.cpp  object.hpp  pong_step1.sol
sgfx/: CMakeLists.txt  Makefile
sgfx/include/sgfx/: canvas.hpp  color.hpp  key.hpp  primitive_types.hpp  primitives.hpp  widget.hpp  window.hpp
sgfx/src/: canvas.cpp  primitives.cpp  window.cpp
